--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd" id="WebApp_ID" version="3.0">
   <display-name>一偏之荐</display-name>
+
+
+
   <filter>
     <filter-name>PageStateFilter</filter-name>
     <filter-class>com.cwc.web.ypzj.filter.PageStateFilter</filter-class>
@@ -17,13 +20,12 @@
     <filter-name>PageDataFilter</filter-name>
     <url-pattern>/*</url-pattern>
   </filter-mapping>
+
+
+
   <servlet>
     <servlet-name>IndexJSP</servlet-name>
     <jsp-file>/jsp/index.jsp</jsp-file>
-  </servlet>
-  <servlet>
-    <servlet-name>ErrorJSP</servlet-name>
-    <jsp-file>/jsp/error.jsp</jsp-file>
   </servlet>
   <servlet>
     <servlet-name>KindJSP</servlet-name>
@@ -37,6 +39,17 @@
     <servlet-name>PersonalJSP</servlet-name>
     <jsp-file>/jsp/personal.jsp</jsp-file>
   </servlet>
+  <servlet>
+    <servlet-name>TotalJSP</servlet-name>
+    <jsp-file>/jsp/total.jsp</jsp-file>
+  </servlet>
+  <servlet>
+    <servlet-name>AdminJSP</servlet-name>
+    <jsp-file>/jsp/admin.jsp</jsp-file>
+  </servlet>
+
+
+
   <servlet>
     <servlet-name>LoginServlet</servlet-name>
     <servlet-class>com.cwc.web.ypzj.servlets.LoginServlet</servlet-class>
@@ -53,21 +66,20 @@
     <servlet-name>LogOutServlet</servlet-name>
     <servlet-class>com.cwc.web.ypzj.servlets.LogOutServlet</servlet-class>
   </servlet>
+
+
+
   <servlet>
-  	<servlet-name>ImgServlet</servlet-name>
-  	<servlet-class>com.cwc.web.ypzj.servlets.ImgServlet</servlet-class>
+  	<servlet-name>ImgAPI</servlet-name>
+  	<servlet-class>com.cwc.web.ypzj.api.ImgAPI</servlet-class>
   </servlet>
   <servlet>
-  	<servlet-name>LinkServlet</servlet-name>
-  	<servlet-class>com.cwc.web.ypzj.servlets.LinkServlet</servlet-class>
+  	<servlet-name>LinkAPI</servlet-name>
+  	<servlet-class>com.cwc.web.ypzj.api.LinkAPI</servlet-class>
   </servlet>
-  <servlet-mapping>
-    <servlet-name>IndexJSP</servlet-name>
-    <url-pattern>/index</url-pattern>
-    <url-pattern>/index.html</url-pattern>
-    <url-pattern>/index.jsp</url-pattern>
-    <url-pattern>/index.htm</url-pattern>
-  </servlet-mapping>
+
+
+
   <servlet-mapping>
     <servlet-name>LoginServlet</servlet-name>
     <url-pattern>/login</url-pattern>
@@ -82,15 +94,22 @@
   </servlet-mapping>
   <servlet-mapping>
     <servlet-name>ArticleServlet</servlet-name>
-    <url-pattern>/article/*</url-pattern>
+    <url-pattern>/article</url-pattern>
   </servlet-mapping>
   <servlet-mapping>
-  	<servlet-name>ImgServlet</servlet-name>
-  	<url-pattern>/user/edit/img</url-pattern>
+  	<servlet-name>ImgAPI</servlet-name>
+  	<url-pattern>/user/img/*</url-pattern>
   </servlet-mapping>
   <servlet-mapping>
-  	<servlet-name>LinkServlet</servlet-name>
-  	<url-pattern>/user/edit/link</url-pattern>
+  	<servlet-name>LinkAPI</servlet-name>
+  	<url-pattern>/user/link/*</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>IndexJSP</servlet-name>
+    <url-pattern>/index</url-pattern>
+    <url-pattern>/index.html</url-pattern>
+    <url-pattern>/index.jsp</url-pattern>
+    <url-pattern>/index.htm</url-pattern>
   </servlet-mapping>
   <servlet-mapping>
     <servlet-name>KindJSP</servlet-name>
@@ -105,12 +124,19 @@
     <url-pattern>/user/personal</url-pattern>
   </servlet-mapping>
   <servlet-mapping>
-    <servlet-name>ErrorJSP</servlet-name>
-    <url-pattern>/error</url-pattern>
+    <servlet-name>TotalJSP</servlet-name>
+    <url-pattern>/user/total</url-pattern>
   </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>AdminJSP</servlet-name>
+    <url-pattern>/admin</url-pattern>
+  </servlet-mapping>
+
+
+
   <error-page>
     <exception-type>java.lang.Exception</exception-type>
-    <location>/error</location>
+    <location>/WEB-INF/jsp/error.jsp</location>
   </error-page>
   <welcome-file-list>
     <welcome-file>index</welcome-file>
