--- a/src/main/webapp/WEB-INF/config/application.properties
+++ b/src/main/webapp/WEB-INF/config/application.properties
@@ -11,4 +11,5 @@ static.href=http://static.cufercwc.cn/ypzj/
 config.addr.domain=http://ypzj.cufercwc.cn/
 config.addr.mail=./mail.properties
 config.addr.admin=./admin.properties
+config.addr.log4j=./log4j.xml
 
