--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,27 @@
 		  <version>1.5.0-b01</version>
 	  </dependency>
 
+	  <!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-api -->
+	  <dependency>
+		  <groupId>org.slf4j</groupId>
+		  <artifactId>slf4j-api</artifactId>
+		  <version>1.7.25</version>
+	  </dependency>
+
+	  <!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-log4j12 -->
+	  <dependency>
+		  <groupId>org.slf4j</groupId>
+		  <artifactId>slf4j-log4j12</artifactId>
+		  <version>1.7.25</version>
+	  </dependency>
+
+	  <dependency>
+          <groupId>log4j</groupId>
+          <artifactId>log4j</artifactId>
+          <version>RELEASE</version>
+      </dependency>
+
+
   </dependencies>
   <build>
   	<plugins>
