--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -25,8 +25,14 @@
     <param-name>mailContentPath</param-name>
     <param-value>/WEB-INF/tmpl/mail.html</param-value>
   </context-param>
-
-
+  <context-param>
+    <param-name>log4jConfigLocation</param-name>
+    <param-value>/WEB-INF/config/log4j.xml</param-value>
+  </context-param>
+  <context-param>
+    <param-name>javax.faces.CONFIG_FILES</param-name>
+    <param-value>/WEB-INF/config/log4j.xml</param-value>
+  </context-param>
 
 
   <servlet>
@@ -57,7 +63,11 @@
     <servlet-name>ManageJSP</servlet-name>
     <jsp-file>/jsp/manage.jsp</jsp-file>
   </servlet>
-
+  <servlet>
+    <servlet-name>Faces Servlet</servlet-name>
+    <servlet-class>javax.faces.webapp.FacesServlet</servlet-class>
+    <load-on-startup>1</load-on-startup>
+  </servlet>
 
 
   <servlet-mapping>
@@ -90,6 +100,10 @@
   <servlet-mapping>
     <servlet-name>ManageJSP</servlet-name>
     <url-pattern>/user/manage</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>Faces Servlet</servlet-name>
+    <url-pattern>*.xhtml</url-pattern>
   </servlet-mapping>
 
 
